Fixed overflowing issue

--- a/src/css/VideoList.css
+++ b/src/css/VideoList.css
@@ -23,6 +23,7 @@
 @media (max-width: 1000px) {
   .videolist-container {
     padding-bottom: 100px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 
   .videolist {
